@@ -167,7 +167,7 @@ public class VTNativeUtils
             output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
             output.flush();
             output.close();
-            status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+            status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
           }
           catch (Throwable e)
           {
@@ -213,7 +213,7 @@ public class VTNativeUtils
           output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
           output.flush();
           output.close();
-          status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+          status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
         }
         catch (Throwable e)
         {
@@ -263,7 +263,7 @@ public class VTNativeUtils
             output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
             output.flush();
             output.close();
-            status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+            status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
           }
           catch (Throwable e)
           {
@@ -309,7 +309,7 @@ public class VTNativeUtils
           output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
           output.flush();
           output.close();
-          status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+          status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
         }
         catch (Throwable e)
         {
